chipyard.TestHarness.RocketSmall1Medium1Big1_BoomMedium1Large1Mega1.top.v.lo-2021-10-09.log
tage.scala:91:27: error: 'hw.instance' op operand type #0 must be 'i8', but got 'i7'
tage.scala:91:27: note: see current operation: %263:4 = "hw.instance"(%27, %arg2, %arg0, %248, %arg0, %250, %252, %254, %256, %257, %258, %259, %260) {argNames = ["R0_addr", "R0_en", "R0_clk", "W0_addr", "W0_clk", "W0_data_0", "W0_data_1", "W0_data_2", "W0_data_3", "W0_mask_0", "W0_mask_1", "W0_mask_2", "W0_mask_3"], instanceName = "table_0", moduleName = @table_0_1, parameters = [], resultNames = ["R0_data_0", "R0_data_1", "R0_data_2", "R0_data_3"]} : (i7, i1, i1, i7, i1, i11, i11, i11, i11, i1, i1, i1, i1) -> (i11, i11, i11, i11)
regress/chipyard.TestHarness.RocketSmall1Medium1Big1_BoomMedium1Large1Mega1.top.v.lo.fir:986:10: note: module declared here
  module table_0 :
         ^
===-------------------------------------------------------------------------===
                         ... Execution time report ...
===-------------------------------------------------------------------------===
  Total Execution Time: 16.0226 seconds

  ----User Time----  ----Wall Time----  ----Name----
    3.9504 ( 19.9%)    3.9504 ( 24.7%)  FIR Parser
    8.4301 ( 42.4%)    5.8285 ( 36.4%)  'firrtl.circuit' Pipeline
    1.6096 (  8.1%)    0.8060 (  5.0%)    'firrtl.module' Pipeline
    1.4598 (  7.3%)    0.7337 (  4.6%)      CSE
    0.0010 (  0.0%)    0.0006 (  0.0%)        (A) DominanceInfo
    0.1458 (  0.7%)    0.0752 (  0.5%)      LowerCHIRRTL
    0.1464 (  0.7%)    0.1464 (  0.9%)    InferWidths
    0.6758 (  3.4%)    0.6758 (  4.2%)    InferResets
    0.0495 (  0.2%)    0.0495 (  0.3%)      (A) circt::firrtl::InstanceGraph
    0.0493 (  0.2%)    0.0493 (  0.3%)    PrefixModules
    0.5329 (  2.7%)    0.5329 (  3.3%)    LowerFIRRTLTypes
    2.4184 ( 12.2%)    1.2124 (  7.6%)    'firrtl.module' Pipeline
    0.9005 (  4.5%)    0.4839 (  3.0%)      ExpandWhens
    1.5136 (  7.6%)    0.7875 (  4.9%)      Canonicalizer
    0.3944 (  2.0%)    0.3944 (  2.5%)    Inliner
    1.4198 (  7.1%)    1.4198 (  8.9%)    IMConstProp
    0.0458 (  0.2%)    0.0458 (  0.3%)      (A) circt::firrtl::InstanceGraph
    0.0002 (  0.0%)    0.0002 (  0.0%)    BlackBoxReader
    1.1687 (  5.9%)    0.5856 (  3.7%)    'firrtl.module' Pipeline
    1.1664 (  5.9%)    0.5843 (  3.6%)      Canonicalizer
    0.9581 (  4.8%)    0.9581 (  6.0%)  LowerFIRRTLToHW
    0.2149 (  1.1%)    0.2149 (  1.3%)  HWMemSimImpl
    2.5459 ( 12.8%)    1.2732 (  7.9%)  'hw.module' Pipeline
    0.0638 (  0.3%)    0.0387 (  0.2%)    HWCleanup
    0.6964 (  3.5%)    0.3525 (  2.2%)    CSE
    0.0012 (  0.0%)    0.0007 (  0.0%)      (A) DominanceInfo
    1.4381 (  7.2%)    0.7349 (  4.6%)    Canonicalizer
    0.0120 (  0.1%)    0.0064 (  0.0%)    HWLegalizeModules
    0.3252 (  1.6%)    0.1750 (  1.1%)    PrettifyVerilog
    3.3196 ( 16.7%)    3.3196 ( 20.7%)  ExportVerilog
    0.4753 (  2.4%)    0.4753 (  3.0%)  Rest
   19.8970 (100.0%)   16.0226 (100.0%)  Total

{
  totalTime: 16.06,
  maxMemory: 875515904
}
